--- a/index.html
+++ b/index.html
@@ -9,59 +9,48 @@
 body {
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont;
-  background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-  color: #fff;
+  background: #ffffff;
+  color: #000;
 }
 
+/* LOGO */
 .header {
-  display: flex;
-  align-items: center;
-  padding: 16px 24px;
+  padding: 24px 32px;
 }
 
 .header img {
-  height: 52px;
+  height: 72px;
 }
 
+/* PANEL */
 .panel {
-  max-width: 640px;
+  max-width: 680px;
   margin: 40px auto;
-  background: rgba(0,0,0,0.35);
-  border-radius: 20px;
-  padding: 32px;
-  backdrop-filter: blur(10px);
+  background: linear-gradient(135deg, #0f2027, #203a43);
+  border-radius: 24px;
+  padding: 36px;
+  color: #fff;
+  box-shadow: 0 20px 40px rgba(0,0,0,0.25);
   text-align: center;
 }
 
+/* CLOCK */
 .clock {
-  font-size: 30px;
-  margin-bottom: 24px;
+  font-size: 34px;
   letter-spacing: 2px;
-}
-
-.mode {
   margin-bottom: 28px;
 }
 
+/* MODE */
+.mode {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 32px;
+}
+
 .mode button {
-  padding: 14px 32px;
-  font-size: 18px;
-  border-radius: 12px;
-  border: none;
-  margin: 0 12px;
-}
-
-.auto { background: #1abc9c; }
-.manual { background: #f39c12; }
-
-.relays {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 18px;
-}
-
-.relay {
-  padding: 22px;
+  padding: 14px 36px;
   font-size: 18px;
   border-radius: 14px;
   border: none;
@@ -69,31 +58,52 @@ body {
   color: #000;
 }
 
-.relay.on {
+/* SYSTEMS */
+.systems {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.system {
+  padding: 24px;
+  font-size: 18px;
+  border-radius: 16px;
+  border: none;
+  background: #bdc3c7;
+  color: #000;
+}
+
+.system.on {
   background: #2ecc71;
+  color: #000;
 }
 </style>
 </head>
 
 <body>
 
+<!-- LOGO -->
 <div class="header">
   <img src="logo.png" alt="IXH logo">
 </div>
 
+<!-- PANEL -->
 <div class="panel">
+
   <div class="clock" id="clock">--:--:--</div>
 
   <div class="mode">
-    <button class="auto">AUTO</button>
-    <button class="manual">MANUAL</button>
+    <button>AUTO</button>
+    <button>MANUAL</button>
   </div>
 
-  <div class="relays">
-    <button class="relay on">PRZEKAŹNIK 1</button>
-    <button class="relay">PRZEKAŹNIK 2</button>
-    <button class="relay">PRZEKAŹNIK 3</button>
+  <div class="systems">
+    <button class="system on">UKŁAD 1</button>
+    <button class="system">UKŁAD 2</button>
+    <button class="system">UKŁAD 3</button>
   </div>
+
 </div>
 
 <script>
