--- a/index.html
+++ b/index.html
@@ -78,6 +78,23 @@ body {
   background: #2ecc71;
   color: #000;
 }
+  footer {
+  margin-top: 80px;
+  padding: 24px;
+  font-size: 14px;
+  color: #666;
+  text-align: center;
+}
+
+footer a {
+  color: #203a43;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
 </style>
 </head>
 
@@ -114,6 +131,12 @@ function updateClock() {
 setInterval(updateClock, 1000);
 updateClock();
 </script>
-
+<footer>
+  <div>IXH-Polska</div>
+  <div>
+    <a href="mailto:ixh@linuxmail.org">ixh@linuxmail.org</a> |
+    <a href="tel:+48578424942">+48 578 424 942</a>
+  </div>
+</footer>
 </body>
 </html>
